include/El/lapack_like/funcs.h

/* Hermitian function
   ================== */

/* Real Hermitian function
   ----------------------- */
EL_EXPORT ElError ElRealHermitianFunction_s
( ElUpperOrLower uplo, ElMatrix_s A, float (*func)(float) );
EL_EXPORT ElError ElRealHermitianFunction_d
( ElUpperOrLower uplo, ElMatrix_d A, double (*func)(double) );
EL_EXPORT ElError ElRealHermitianFunction_c
( ElUpperOrLower uplo, ElMatrix_c A, float (*func)(float) );
EL_EXPORT ElError ElRealHermitianFunction_z
( ElUpperOrLower uplo, ElMatrix_z A, double (*func)(double) );
EL_EXPORT ElError ElRealHermitianFunctionDist_s
( ElUpperOrLower uplo, ElDistMatrix_s A, float (*func)(float) );
EL_EXPORT ElError ElRealHermitianFunctionDist_d
( ElUpperOrLower uplo, ElDistMatrix_d A, double (*func)(double) );
EL_EXPORT ElError ElRealHermitianFunctionDist_c
( ElUpperOrLower uplo, ElDistMatrix_c A, float (*func)(float) );
EL_EXPORT ElError ElRealHermitianFunctionDist_z
( ElUpperOrLower uplo, ElDistMatrix_z A, double (*func)(double) );
/* Complex Hermitian function
   -------------------------- */
EL_EXPORT ElError ElComplexHermitianFunction_c
( ElUpperOrLower uplo, ElMatrix_c A, complex_float (*func)(float) );
EL_EXPORT ElError ElComplexHermitianFunction_z
( ElUpperOrLower uplo, ElMatrix_z A, complex_double (*func)(double) );
EL_EXPORT ElError ElComplexHermitianFunctionDist_c
( ElUpperOrLower uplo, ElDistMatrix_c A, complex_float (*func)(float) );
EL_EXPORT ElError ElComplexHermitianFunctionDist_z
( ElUpperOrLower uplo, ElDistMatrix_z A, complex_double (*func)(double) );
/* Inverse
   ======= */

/* General
   ------- */
EL_EXPORT ElError ElInverse_s( ElMatrix_s A );
EL_EXPORT ElError ElInverse_d( ElMatrix_d A );
EL_EXPORT ElError ElInverse_c( ElMatrix_c A );
EL_EXPORT ElError ElInverse_z( ElMatrix_z A );
EL_EXPORT ElError ElInverseDist_s( ElDistMatrix_s A );
EL_EXPORT ElError ElInverseDist_d( ElDistMatrix_d A );
EL_EXPORT ElError ElInverseDist_c( ElDistMatrix_c A );
EL_EXPORT ElError ElInverseDist_z( ElDistMatrix_z A );
/* After LU factorization with partial pivoting
   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ */
EL_EXPORT ElError ElInverseAfterLUPartialPiv_s
( ElMatrix_s A, ElConstPermutation P );
EL_EXPORT ElError ElInverseAfterLUPartialPiv_d
( ElMatrix_d A, ElConstPermutation P );
EL_EXPORT ElError ElInverseAfterLUPartialPiv_c
( ElMatrix_c A, ElConstPermutation P );
EL_EXPORT ElError ElInverseAfterLUPartialPiv_z
( ElMatrix_z A, ElConstPermutation P );
EL_EXPORT ElError ElInverseAfterLUPartialPivDist_s
( ElDistMatrix_s A, ElConstDistPermutation P );
EL_EXPORT ElError ElInverseAfterLUPartialPivDist_d
( ElDistMatrix_d A, ElConstDistPermutation P );
EL_EXPORT ElError ElInverseAfterLUPartialPivDist_c
( ElDistMatrix_c A, ElConstDistPermutation P );
EL_EXPORT ElError ElInverseAfterLUPartialPivDist_z
( ElDistMatrix_z A, ElConstDistPermutation P );
/* Hermitian Positive-Definite
   --------------------------- */
EL_EXPORT ElError ElHPDInverse_s( ElUpperOrLower uplo, ElMatrix_s A );
EL_EXPORT ElError ElHPDInverse_d( ElUpperOrLower uplo, ElMatrix_d A );
EL_EXPORT ElError ElHPDInverse_c( ElUpperOrLower uplo, ElMatrix_c A );
EL_EXPORT ElError ElHPDInverse_z( ElUpperOrLower uplo, ElMatrix_z A );
EL_EXPORT ElError ElHPDInverseDist_s( ElUpperOrLower uplo, ElDistMatrix_s A );
EL_EXPORT ElError ElHPDInverseDist_d( ElUpperOrLower uplo, ElDistMatrix_d A );
EL_EXPORT ElError ElHPDInverseDist_c( ElUpperOrLower uplo, ElDistMatrix_c A );
EL_EXPORT ElError ElHPDInverseDist_z( ElUpperOrLower uplo, ElDistMatrix_z A );
/* Hermitian
   --------- */
EL_EXPORT ElError ElHermitianInverse_c( ElUpperOrLower uplo, ElMatrix_c A );
EL_EXPORT ElError ElHermitianInverse_z( ElUpperOrLower uplo, ElMatrix_z A );
EL_EXPORT ElError ElHermitianInverseDist_c
( ElUpperOrLower uplo, ElDistMatrix_c A );
EL_EXPORT ElError ElHermitianInverseDist_z
( ElUpperOrLower uplo, ElDistMatrix_z A );
/* TODO: Expert version */

/* Symmetric
   --------- */
EL_EXPORT ElError ElSymmetricInverse_s( ElUpperOrLower uplo, ElMatrix_s A );
EL_EXPORT ElError ElSymmetricInverse_d( ElUpperOrLower uplo, ElMatrix_d A );
EL_EXPORT ElError ElSymmetricInverse_c( ElUpperOrLower uplo, ElMatrix_c A );
EL_EXPORT ElError ElSymmetricInverse_z( ElUpperOrLower uplo, ElMatrix_z A );
EL_EXPORT ElError ElSymmetricInverseDist_s
( ElUpperOrLower uplo, ElDistMatrix_s A );
EL_EXPORT ElError ElSymmetricInverseDist_d
( ElUpperOrLower uplo, ElDistMatrix_d A );
EL_EXPORT ElError ElSymmetricInverseDist_c
( ElUpperOrLower uplo, ElDistMatrix_c A );
EL_EXPORT ElError ElSymmetricInverseDist_z
( ElUpperOrLower uplo, ElDistMatrix_z A );