include/El/lapack_like/funcs.py

#
#  Copyright (c) 2009-2014, Jack Poulson
#  All rights reserved.
#
#  This file is part of Elemental and is under the BSD 2-Clause License, 
#  which can be found in the LICENSE file in the root directory, or at 
#  http://opensource.org/licenses/BSD-2-Clause
#
from ..core import *
import ctypes
from ctypes import CFUNCTYPE

# Hermitian function
# ==================
lib.ElRealHermitianFunction_s.argtypes = \
  [c_uint,c_void_p,CFUNCTYPE(sType,sType)]
lib.ElRealHermitianFunction_s.restype = c_uint
lib.ElRealHermitianFunction_d.argtypes = \
  [c_uint,c_void_p,CFUNCTYPE(dType,dType)]
lib.ElRealHermitianFunction_d.restype = c_uint
lib.ElRealHermitianFunction_c.argtypes = \
  [c_uint,c_void_p,CFUNCTYPE(sType,sType)]
lib.ElRealHermitianFunction_c.restype = c_uint
lib.ElRealHermitianFunction_z.argtypes = \
  [c_uint,c_void_p,CFUNCTYPE(dType,dType)]
lib.ElRealHermitianFunction_z.restype = c_uint
lib.ElRealHermitianFunctionDist_s.argtypes = \
  [c_uint,c_void_p,CFUNCTYPE(sType,sType)]
lib.ElRealHermitianFunctionDist_s.restype = c_uint
lib.ElRealHermitianFunctionDist_d.argtypes = \
  [c_uint,c_void_p,CFUNCTYPE(dType,dType)]
lib.ElRealHermitianFunctionDist_d.restype = c_uint
lib.ElRealHermitianFunctionDist_c.argtypes = \
  [c_uint,c_void_p,CFUNCTYPE(sType,sType)]
lib.ElRealHermitianFunctionDist_c.restype = c_uint
lib.ElRealHermitianFunctionDist_z.argtypes = \
  [c_uint,c_void_p,CFUNCTYPE(dType,dType)]
lib.ElRealHermitianFunctionDist_z.restype = c_uint

lib.ElComplexHermitianFunction_c.argtypes = \
  [c_uint,c_void_p,CFUNCTYPE(cType,sType)]
lib.ElComplexHermitianFunction_c.restype = c_uint
lib.ElComplexHermitianFunction_z.argtypes = \
  [c_uint,c_void_p,CFUNCTYPE(zType,dType)]
lib.ElComplexHermitianFunction_z.restype = c_uint
lib.ElComplexHermitianFunctionDist_c.argtypes = \
  [c_uint,c_void_p,CFUNCTYPE(cType,sType)]
lib.ElComplexHermitianFunctionDist_c.restype = c_uint
lib.ElComplexHermitianFunctionDist_z.argtypes = \
  [c_uint,c_void_p,CFUNCTYPE(zType,dType)]
lib.ElComplexHermitianFunctionDist_z.restype = c_uint
def HermitianFunction(uplo,A,func,isReal=True):
  if type(A) is Matrix:
    if isReal:
      cFunc = CFUNCTYPE(TagToType(Base(A.tag)),TagToType(Base(A.tag)))(func)
      if   A.tag == sTag: lib.ElRealHermitianFunction_s(uplo,A.obj,cFunc)
      elif A.tag == dTag: lib.ElRealHermitianFunction_d(uplo,A.obj,cFunc)
      elif A.tag == cTag: lib.ElRealHermitianFunction_c(uplo,A.obj,cFunc)
      elif A.tag == zTag: lib.ElRealHermitianFunction_z(uplo,A.obj,cFunc)
      else: raise Exception('Unsupported datatype')
    else:
      cFunc = CFUNCTYPE(TagToType(A.tag),TagToType(Base(A.tag)))(func)
      if   A.tag == cTag: lib.ElComplexHermitianFunction_c(uplo,A.obj,cFunc)
      elif A.tag == zTag: lib.ElComplexHermitianFunction_z(uplo,A.obj,cFunc)
      else: raise Exception('Unsupported datatype')
  elif type(A) is DistMatrix:
    if isReal:
      cFunc = CFUNCTYPE(TagToType(Base(A.tag)),TagToType(Base(A.tag)))(func)
      if   A.tag == sTag: lib.ElRealHermitianFunctionDist_s(uplo,A.obj,cFunc)
      elif A.tag == dTag: lib.ElRealHermitianFunctionDist_d(uplo,A.obj,cFunc)
      elif A.tag == cTag: lib.ElRealHermitianFunctionDist_c(uplo,A.obj,cFunc)
      elif A.tag == zTag: lib.ElRealHermitianFunctionDist_z(uplo,A.obj,cFunc)
      else: raise Exception('Unsupported datatype')
    else:
      cFunc = CFUNCTYPE(TagToType(A.tag),TagToType(Base(A.tag)))(func)
      if   A.tag == cTag: lib.ElComplexHermitianFunctionDist_c(uplo,A.obj,cFunc)
      elif A.tag == zTag: lib.ElComplexHermitianFunctionDist_z(uplo,A.obj,cFunc)
      else: raise Exception('Unsupported datatype')
  else: raise Exception('Unsupported matrix type')

# Inverse
# =======

# General
# -------
lib.ElInverse_s.argtypes = [c_void_p]
lib.ElInverse_s.restype = c_uint
lib.ElInverse_d.argtypes = [c_void_p]
lib.ElInverse_d.restype = c_uint
lib.ElInverse_c.argtypes = [c_void_p]
lib.ElInverse_c.restype = c_uint
lib.ElInverse_z.argtypes = [c_void_p]
lib.ElInverse_z.restype = c_uint
lib.ElInverseDist_s.argtypes = [c_void_p]
lib.ElInverseDist_s.restype = c_uint
lib.ElInverseDist_d.argtypes = [c_void_p]
lib.ElInverseDist_d.restype = c_uint
lib.ElInverseDist_c.argtypes = [c_void_p]
lib.ElInverseDist_c.restype = c_uint
lib.ElInverseDist_z.argtypes = [c_void_p]
lib.ElInverseDist_z.restype = c_uint
def Inverse(A):
  if type(A) is Matrix:
    if   A.tag == sTag: lib.ElInverse_s(A.obj)
    elif A.tag == dTag: lib.ElInverse_d(A.obj)
    elif A.tag == cTag: lib.ElInverse_c(A.obj)
    elif A.tag == zTag: lib.ElInverse_z(A.obj)
    else: raise Exception('Unsupported datatype')
  elif type(A) is DistMatrix:
    if   A.tag == sTag: lib.ElInverseDist_s(A.obj)
    elif A.tag == dTag: lib.ElInverseDist_d(A.obj)
    elif A.tag == cTag: lib.ElInverseDist_c(A.obj)
    elif A.tag == zTag: lib.ElInverseDist_z(A.obj)
    else: raise Exception('Unsupported datatype')
  else: raise Exception('Unsupported matrix type')

# After LU factorization with partial pivoting
# --------------------------------------------
lib.ElInverseAfterLUPartialPiv_s.argtypes = [c_void_p,c_void_p]
lib.ElInverseAfterLUPartialPiv_s.restype = c_uint
lib.ElInverseAfterLUPartialPiv_d.argtypes = [c_void_p,c_void_p]
lib.ElInverseAfterLUPartialPiv_d.restype = c_uint
lib.ElInverseAfterLUPartialPiv_c.argtypes = [c_void_p,c_void_p]
lib.ElInverseAfterLUPartialPiv_c.restype = c_uint
lib.ElInverseAfterLUPartialPiv_z.argtypes = [c_void_p,c_void_p]
lib.ElInverseAfterLUPartialPiv_z.restype = c_uint
lib.ElInverseAfterLUPartialPivDist_s.argtypes = [c_void_p,c_void_p]
lib.ElInverseAfterLUPartialPivDist_s.restype = c_uint
lib.ElInverseAfterLUPartialPivDist_d.argtypes = [c_void_p,c_void_p]
lib.ElInverseAfterLUPartialPivDist_d.restype = c_uint
lib.ElInverseAfterLUPartialPivDist_c.argtypes = [c_void_p,c_void_p]
lib.ElInverseAfterLUPartialPivDist_c.restype = c_uint
lib.ElInverseAfterLUPartialPivDist_z.argtypes = [c_void_p,c_void_p]
lib.ElInverseAfterLUPartialPivDist_z.restype = c_uint
def InverseAfterLUPartialPiv(A,p):
  if type(A) is not type(p):
    raise Exception('Types of A and p must match')
  if p.tag != iTag:
    raise Exception('p must be integral')
  if type(A) is Matrix:
    if   A.tag == sTag: lib.ElInverseAfterLUPartialPiv_s(A.obj,p.obj)
    elif A.tag == dTag: lib.ElInverseAfterLUPartialPiv_d(A.obj,p.obj)
    elif A.tag == cTag: lib.ElInverseAfterLUPartialPiv_c(A.obj,p.obj)
    elif A.tag == zTag: lib.ElInverseAfterLUPartialPiv_z(A.obj,p.obj)
    else: raise Exception('Unsupported datatype')
  elif type(A) is DistMatrix:
    if   A.tag == sTag: lib.ElInverseAfterLUPartialPivDist_s(A.obj,p.obj)
    elif A.tag == dTag: lib.ElInverseAfterLUPartialPivDist_d(A.obj,p.obj)
    elif A.tag == cTag: lib.ElInverseAfterLUPartialPivDist_c(A.obj,p.obj)
    elif A.tag == zTag: lib.ElInverseAfterLUPartialPivDist_z(A.obj,p.obj)
    else: raise Exception('Unsupported datatype')
  else: raise Exception('Unsupported matrix type')

# Invert a Hermitian Positive-Definite matrix
# -------------------------------------------
lib.ElHPDInverse_s.argtypes = [c_uint,c_void_p]
lib.ElHPDInverse_s.restype = c_uint
lib.ElHPDInverse_d.argtypes = [c_uint,c_void_p]
lib.ElHPDInverse_d.restype = c_uint
lib.ElHPDInverse_c.argtypes = [c_uint,c_void_p]
lib.ElHPDInverse_c.restype = c_uint
lib.ElHPDInverse_z.argtypes = [c_uint,c_void_p]
lib.ElHPDInverse_z.restype = c_uint
lib.ElHPDInverseDist_s.argtypes = [c_uint,c_void_p]
lib.ElHPDInverseDist_s.restype = c_uint
lib.ElHPDInverseDist_d.argtypes = [c_uint,c_void_p]
lib.ElHPDInverseDist_d.restype = c_uint
lib.ElHPDInverseDist_c.argtypes = [c_uint,c_void_p]
lib.ElHPDInverseDist_c.restype = c_uint
lib.ElHPDInverseDist_z.argtypes = [c_uint,c_void_p]
lib.ElHPDInverseDist_z.restype = c_uint
def HPDInverse(uplo,A):
  if type(A) is Matrix:
    if   A.tag == sTag: lib.ElHPDInverse_s(uplo,A.obj)
    elif A.tag == dTag: lib.ElHPDInverse_d(uplo,A.obj)
    elif A.tag == cTag: lib.ElHPDInverse_c(uplo,A.obj)
    elif A.tag == zTag: lib.ElHPDInverse_z(uplo,A.obj)
    else: raise Exception('Unsupported datatype')
  elif type(A) is DistMatrix:
    if   A.tag == sTag: lib.ElHPDInverseDist_s(uplo,A.obj)
    elif A.tag == dTag: lib.ElHPDInverseDist_d(uplo,A.obj)
    elif A.tag == cTag: lib.ElHPDInverseDist_c(uplo,A.obj)
    elif A.tag == zTag: lib.ElHPDInverseDist_z(uplo,A.obj)
    else: raise Exception('Unsupported datatype')
  else: raise Exception('Unsupported matrix type')

# Invert a symmetric/Hermitian matrix
# -----------------------------------
lib.ElSymmetricInverse_s.argtypes = [c_uint,c_void_p]
lib.ElSymmetricInverse_s.restype = c_uint
lib.ElSymmetricInverse_d.argtypes = [c_uint,c_void_p]
lib.ElSymmetricInverse_d.restype = c_uint
lib.ElSymmetricInverse_c.argtypes = [c_uint,c_void_p]
lib.ElSymmetricInverse_c.restype = c_uint
lib.ElSymmetricInverse_z.argtypes = [c_uint,c_void_p]
lib.ElSymmetricInverse_z.restype = c_uint
lib.ElSymmetricInverseDist_s.argtypes = [c_uint,c_void_p]
lib.ElSymmetricInverseDist_s.restype = c_uint
lib.ElSymmetricInverseDist_d.argtypes = [c_uint,c_void_p]
lib.ElSymmetricInverseDist_d.restype = c_uint
lib.ElSymmetricInverseDist_c.argtypes = [c_uint,c_void_p]
lib.ElSymmetricInverseDist_c.restype = c_uint
lib.ElSymmetricInverseDist_z.argtypes = [c_uint,c_void_p]
lib.ElSymmetricInverseDist_z.restype = c_uint
lib.ElHermitianInverse_c.argtypes = [c_uint,c_void_p]
lib.ElHermitianInverse_c.restype = c_uint
lib.ElHermitianInverse_z.argtypes = [c_uint,c_void_p]
lib.ElHermitianInverse_z.restype = c_uint
lib.ElHermitianInverseDist_c.argtypes = [c_uint,c_void_p]
lib.ElHermitianInverseDist_c.restype = c_uint
lib.ElHermitianInverseDist_z.argtypes = [c_uint,c_void_p]
lib.ElHermitianInverseDist_z.restype = c_uint
def SymmetricInverse(uplo,A,conjugate=False):
  if type(A) is Matrix:
    if   A.tag == sTag: lib.ElSymmetricInverse_s(uplo,A.obj)
    elif A.tag == dTag: lib.ElSymmetricInverse_d(uplo,A.obj)
    elif A.tag == cTag: 
      if conjugate: lib.ElHermitianInverse_c(uplo,A.obj)
      else:         lib.ElSymmetricInverse_c(uplo,A.obj)
    elif A.tag == zTag:
      if conjugate: lib.ElHermitianInverse_z(uplo,A.obj)
      else:         lib.ElSymmetricInverse_z(uplo,A.obj)
    else: raise Exception('Unsupported datatype')
  elif type(A) is DistMatrix:
    if   A.tag == sTag: lib.ElSymmetricInverseDist_s(uplo,A.obj)
    elif A.tag == dTag: lib.ElSymmetricInverseDist_d(uplo,A.obj)
    elif A.tag == cTag: 
      if conjugate: lib.ElHermitianInverseDist_c(uplo,A.obj)
      else:         lib.ElSymmetricInverseDist_c(uplo,A.obj)
    elif A.tag == zTag:
      if conjugate: lib.ElHermitianInverseDist_z(uplo,A.obj)
      else:         lib.ElSymmetricInverseDist_z(uplo,A.obj)
    else: raise Exception('Unsupported datatype')
  else: raise Exception('Unsupported matrix type')
def HermitianInverse(uplo,A):
  SymmetricInverse(uplo,A,True)
